force-app/main/default/objects/Opportunity/fields/Delta_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delta_Reason__c</fullName>
    <formula>SUBSTITUTE(TRIM( IF ( Delta_Dormant__c, &quot;Dormant &quot;, &quot;&quot;) + IF( Delta_Est_Comp_Date__c, &quot;Date &quot;, &quot;&quot;) + IF(Delta_GDV__c, &quot;GDV &quot;,&quot;&quot;)),&quot; &quot;, &quot;,&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Reason</label>
    <type>Text</type>
</CustomField>