force-app/main/default/objects/Opportunity/fields/DEMO_API_Credentials__c.field-meta.xml
<CustomField>
    <fullName>DEMO_API_Credentials__c</fullName>
    <label>DEMO API Credentials</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>