force-app/main/default/objects/Opportunity/fields/Demo_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Demo_Configuration__c</fullName>
    <label>Demo Configuration</label>
    <type>TextArea</type>
</CustomField>