force-app/main/default/objects/Opportunity/fields/Demo_ECN__c.field-meta.xml
<CustomField>
    <fullName>Demo_ECN__c</fullName>
    <label>Demo ECN</label>
    <type>TextArea</type>
</CustomField>