force-app/main/default/objects/Opportunity/fields/Demo_ECN_and_API_Credential_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_ECN_and_API_Credential_Sent_Date__c</fullName>
    <inlineHelpText>This is a Date field equivalent to the historical field &quot;DEMO ECN&quot;; populated when the relevent delivery ticket&#39;s &quot;Demo API ECN and Test Scenario Sent&quot; field is entered by completion of task</inlineHelpText>
    <label>Demo ECN and API Credential Sent Date</label>
    <type>Date</type>
</CustomField>