force-app/main/default/objects/Opportunity/fields/Dormant_Category__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Category__c</fullName>
    <label>Dormant Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>