force-app/main/default/objects/Opportunity/fields/Dormant_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dormant_End_Date__c</fullName>
    <formula>Related_Ticket__r.Dormant_End_Date__c</formula>
    <label>Dormant End Date</label>
    <type>Date</type>
</CustomField>