force-app/main/default/objects/Opportunity/fields/Dormant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Start_Date__c</fullName>
    <formula>Related_Ticket__r.Dormant_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dormant Start Date</label>
    <type>Date</type>
</CustomField>