force-app/main/default/objects/Opportunity/fields/Due_Diligence_Completed__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Completed__c</fullName>
    <label>Account Completed DD</label>
    <type>DateTime</type>
</CustomField>