force-app/main/default/objects/Opportunity/fields/Duration_minus_Dormant_Time__c.field-meta.xml
<CustomField>
    <fullName>Duration_minus_Dormant_Time__c</fullName>
    <formula>IF(ISNULL(Completed_Date__c), 
CASE(MOD( Implementation_Start_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - Implementation_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - Implementation_Start_Date__c )/7)*5) - Total_Dormant_Duration__c ,
CASE(MOD( Implementation_Start_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Completed_Date__c - Implementation_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Completed_Date__c - Implementation_Start_Date__c )/7)*5)- Total_Dormant_Duration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration ( minus Dormant Time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>