force-app/main/default/objects/Opportunity/fields/eNett_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eNett Contract Reference</label>
    <referenceTo>eNett_Contract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>