force-app/main/default/objects/Opportunity/fields/enett_margin_annual__c.field-meta.xml
<CustomField>
    <fullName>enett_margin_annual__c</fullName>
    <formula>enett_margin_monthly__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation (enett margin monthly x 12)</inlineHelpText>
    <label>eNett margin (annual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>