force-app/main/default/objects/Opportunity/fields/enett_margin_monthly__c.field-meta.xml
<CustomField>
    <fullName>enett_margin_monthly__c</fullName>
    <formula>interchange_enett_margin_amount__c +  Other_product_amount_monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eNett margin (monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>