force-app/main/default/objects/Opportunity/fields/enett_margin_term__c.field-meta.xml
<CustomField>
    <fullName>enett_margin_term__c</fullName>
    <formula>enett_margin_monthly__c *  Term_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation (enett margin monthly x term)</inlineHelpText>
    <label>eNett margin (term)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>