force-app/main/default/objects/Opportunity/fields/ENI_Testing_Scenarios_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>ENI_Testing_Scenarios_Complete_Date__c</fullName>
    <inlineHelpText>This is a Date field equivalent to the historical field &quot;ENI Testing Scenarios Confirmed Complete&quot;; populated when the relevent delivery ticket&#39;s &quot;Test Scenario Document Validated&quot; field is filled in by completion of task</inlineHelpText>
    <label>ENI Testing Scenarios Complete Date</label>
    <type>Date</type>
</CustomField>