force-app/main/default/objects/Opportunity/fields/ENI_Testing_Scenarios_Confirmed_Complete__c.field-meta.xml
<CustomField>
    <fullName>ENI_Testing_Scenarios_Confirmed_Complete__c</fullName>
    <label>ENI Testing Scenarios Confirmed Complete</label>
    <type>TextArea</type>
</CustomField>