force-app/main/default/objects/Opportunity/fields/Est_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Change_Date__c</fullName>
    <formula>Related_Ticket__r.Estm_Comp_Date_Change_Date__c</formula>
    <label>Date of Change</label>
    <type>Date</type>
</CustomField>