force-app/main/default/objects/Opportunity/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <inlineHelpText>This is the date that the delivery owner has forecast for the completion of the delivery.</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>