force-app/main/default/objects/Opportunity/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <inlineHelpText>Is the proposal for exclusivity? An example of part exclusivity may be exclusive on a specific payables area such as BSP payments.</inlineHelpText>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>