force-app/main/default/objects/Opportunity/fields/Expected_First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_First_Transaction_Date__c</fullName>
    <inlineHelpText>Enter the date of the expected first transaction.  The accuracy of the day is less important than the month and year.</inlineHelpText>
    <label>Expected First Transaction Date</label>
    <type>Date</type>
</CustomField>