force-app/main/default/objects/Opportunity/fields/FCP_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>FCP_Opportunity_Status__c</fullName>
    <label>FCP Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Days</fullName>
            </value>
            <value>
                <fullName>Long Shot</fullName>
            </value>
            <value>
                <fullName>50 : 50</fullName>
            </value>
            <value>
                <fullName>Looking Good</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>