force-app/main/default/objects/Opportunity/fields/February_15__c.field-meta.xml
<CustomField>
    <fullName>February_15__c</fullName>
    <label>February 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>