force-app/main/default/objects/Opportunity/fields/Fee_per_transaction__c.field-meta.xml
<CustomField>
    <fullName>Fee_per_transaction__c</fullName>
    <label>Fee per transaction</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>