force-app/main/default/objects/Opportunity/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>