force-app/main/default/objects/Opportunity/fields/Funding_account_rec_report_email__c.field-meta.xml
<CustomField>
    <fullName>Funding_account_rec_report_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding account rec report (email)</label>
    <type>Checkbox</type>
</CustomField>