force-app/main/default/objects/Opportunity/fields/Funds_received__c.field-meta.xml
<CustomField>
    <fullName>Funds_received__c</fullName>
    <inlineHelpText>The date is automatically populated when the funding has been confirmed.  The trigger is based on the Ticket-Funding field being completed.</inlineHelpText>
    <label>Funds received</label>
    <type>Date</type>
</CustomField>