force-app/main/default/objects/Opportunity/fields/FX_Waiver__c.field-meta.xml
<CustomField>
    <fullName>FX_Waiver__c</fullName>
    <label>FX Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>