force-app/main/default/objects/Opportunity/fields/GDS__c.field-meta.xml
<CustomField>
    <fullName>GDS__c</fullName>
    <formula>IF( INCLUDES(Account.GDS_multi_select__c , &quot;Abacus&quot;), &quot;Abacus; &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Amadeus&quot;), &quot;Amadeus; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Apollo&quot;), &quot;Apollo; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Axess&quot;), &quot;Axess; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Galileo&quot;), &quot;Galileo; &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Infini&quot;), &quot;Infini; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Sabre&quot;), &quot;Sabre; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Sirena&quot;), &quot;Sirena; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Topas&quot;), &quot;Topas; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Travelsky&quot;), &quot;Travelsky; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.GDS_multi_select__c , &quot;Worldspan&quot;), &quot;Worldspan; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDS</label>
    <type>Text</type>
</CustomField>