force-app/main/default/objects/Opportunity/fields/GDV_Change_Author__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Author__c</fullName>
    <label>GDV Change Author</label>
    <type>TextArea</type>
</CustomField>