force-app/main/default/objects/Opportunity/fields/GDV_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Date__c</fullName>
    <label>GDV Change Date</label>
    <type>Date</type>
</CustomField>