force-app/main/default/objects/Opportunity/fields/GDV_Change_Effect__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Effect__c</fullName>
    <formula>if ( Delta_GDV__c, Attainable_TTV_annual__c - Previous_Annual_GDV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effect on Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>