force-app/main/default/objects/Opportunity/fields/GDV_Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Justification__c</fullName>
    <label>GDV Change Justification</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>