force-app/main/default/objects/Opportunity/fields/GDV_Change_Justification_History__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Justification_History__c</fullName>
    <label>GDV Change Justification History</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>