force-app/main/default/objects/Opportunity/fields/GDV_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Reason__c</fullName>
    <label>GDV Change Reason</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>