force-app/main/default/objects/Opportunity/fields/Hidden_14_Day_Del_Field_Task__c.field-meta.xml
<CustomField>
    <fullName>Hidden_14_Day_Del_Field_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden 14 Day Del Field Task</label>
    <type>Checkbox</type>
</CustomField>