force-app/main/default/objects/Opportunity/fields/Hidden_Stage_3_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Stage_3_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Stage 3 checkbox</label>
    <type>Checkbox</type>
</CustomField>