force-app/main/default/objects/Opportunity/fields/Hours_Man_Effort_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_Man_Effort_To_Date__c</fullName>
    <label>Hours Man Effort To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>