force-app/main/default/objects/Opportunity/fields/Hours_Man_Effort_To_Date_Hours_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Hours_Man_Effort_To_Date_Hours_Minutes__c</fullName>
    <formula>IF(
 Total_Delivery_Effort_Man_Hours__c &gt; 0 ,
TEXT( FLOOR ( Total_Delivery_Effort_Man_Hours__c ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( Total_Delivery_Effort_Man_Hours__c * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Man Effort To Date (Hours/Minutes)</label>
    <type>Text</type>
</CustomField>