force-app/main/default/objects/Opportunity/fields/Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date__c</fullName>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>