force-app/main/default/objects/Opportunity/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <label>Implementation Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>