force-app/main/default/objects/Opportunity/fields/Incentive_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Rationale__c</fullName>
    <inlineHelpText>What is the rationale behind the incentive structure proposed?</inlineHelpText>
    <label>Incentive Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>