force-app/main/default/objects/Opportunity/fields/Include_in_Full_Court_Press__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Full_Court_Press__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if this opportunity is to be included in Full Court Press reporting.</inlineHelpText>
    <label>Include in Full Court Press?</label>
    <type>Checkbox</type>
</CustomField>