force-app/main/default/objects/Opportunity/fields/Integration_Method__c.field-meta.xml
<CustomField>
    <fullName>Integration_Method__c</fullName>
    <inlineHelpText>How will the prospect/client use VANs?</inlineHelpText>
    <label>Integration Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party API</fullName>
            </value>
            <value>
                <fullName>API - Completed</fullName>
            </value>
            <value>
                <fullName>API - Not Started</fullName>
            </value>
            <value>
                <fullName>API - Underway</fullName>
            </value>
            <value>
                <fullName>CSV Upload</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>