force-app/main/default/objects/Opportunity/fields/interchange_bank_fee_bps__c.field-meta.xml
<CustomField>
    <fullName>interchange_bank_fee_bps__c</fullName>
    <inlineHelpText>Average based on understanding of the client&#39;s transaction mix.  Add in Euram Bank fee if card issued by Citi or another bank.</inlineHelpText>
    <label>Interchange - Bank fee (bps)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>