force-app/main/default/objects/Opportunity/fields/interchange_bank_fee_percentage__c.field-meta.xml
<CustomField>
    <fullName>interchange_bank_fee_percentage__c</fullName>
    <formula>interchange_bank_fee_bps__c /  Interchange_Gross_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchange - Bank fee (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>