force-app/main/default/objects/Opportunity/fields/interchange_client_rebate_bps__c.field-meta.xml
<CustomField>
    <fullName>interchange_client_rebate_bps__c</fullName>
    <inlineHelpText>At full Attainable TTV</inlineHelpText>
    <label>Interchange - Client rebate (bps)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>