force-app/main/default/objects/Opportunity/fields/Interchange_Client_rebate_percentage__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Client_rebate_percentage__c</fullName>
    <formula>interchange_client_rebate_bps__c /  Interchange_Gross_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchange - Client rebate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>