force-app/main/default/objects/Opportunity/fields/interchange_enett_margin_amount__c.field-meta.xml
<CustomField>
    <fullName>interchange_enett_margin_amount__c</fullName>
    <formula>attainable_ttv_monthly__c * Interchange_eNett_margin_bps__c / 10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchange - eNett margin ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>