force-app/main/default/objects/Opportunity/fields/Interchange_eNett_margin_bps__c.field-meta.xml
<CustomField>
    <fullName>Interchange_eNett_margin_bps__c</fullName>
    <formula>Interchange_Gross_bps__c -  interchange_bank_fee_bps__c -  Interchange_Referrer_fee_bps__c -  interchange_client_rebate_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation (Gross - Bank fee - Referrer fee - Client rebate)</inlineHelpText>
    <label>Interchange - eNett margin (bps)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>