force-app/main/default/objects/Opportunity/fields/Interchange_eNett_margin_percentage__c.field-meta.xml
<CustomField>
    <fullName>Interchange_eNett_margin_percentage__c</fullName>
    <formula>Interchange_eNett_margin_bps__c /  Interchange_Gross_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchange - eNett margin (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>