force-app/main/default/objects/Opportunity/fields/Interchange_Gross_bps__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Gross_bps__c</fullName>
    <inlineHelpText>Average based on understanding of the client&#39;s transaction mix.</inlineHelpText>
    <label>Interchange - Gross (bps)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>