force-app/main/default/objects/Opportunity/fields/Interchange_Gross_percentage__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Gross_percentage__c</fullName>
    <formula>interchange_bank_fee_percentage__c + Interchange_Client_rebate_percentage__c +  Interchange_eNett_margin_percentage__c + Interchange_Referrer_fee_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchange - Gross (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>