force-app/main/default/objects/Opportunity/fields/Interchange_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Narrative__c</fullName>
    <inlineHelpText>Long form text field for complicated interchange arrangements (e.g. tiers)</inlineHelpText>
    <label>Interchange - Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>