force-app/main/default/objects/Opportunity/fields/Interchange_Referrer_fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Referrer_fee_bps__c</fullName>
    <inlineHelpText>As per referral agreement</inlineHelpText>
    <label>Interchange - Referrer fee (bps)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>