force-app/main/default/objects/Opportunity/fields/Interchange_Referrer_fee_percent__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Referrer_fee_percent__c</fullName>
    <formula>Interchange_Referrer_fee_bps__c  /   Interchange_Gross_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchange - Referrer fee (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>