force-app/main/default/objects/Opportunity/fields/Is_a_third_party_integration__c.field-meta.xml
<CustomField>
    <fullName>Is_a_third_party_integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to allow the GDV to be entered as zero</description>
    <label>Is a third party integration</label>
    <type>Checkbox</type>
</CustomField>