force-app/main/default/objects/Opportunity/fields/Issued_YTD__c.field-meta.xml
<CustomField>
    <fullName>Issued_YTD__c</fullName>
    <label>Issued YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>