force-app/main/default/objects/Opportunity/fields/January_15__c.field-meta.xml
<CustomField>
    <fullName>January_15__c</fullName>
    <label>January 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>