force-app/main/default/objects/Opportunity/fields/July_14__c.field-meta.xml
<CustomField>
    <fullName>July_14__c</fullName>
    <label>July 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>