force-app/main/default/objects/Opportunity/fields/July_15__c.field-meta.xml
<CustomField>
    <fullName>July_15__c</fullName>
    <label>July 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>