force-app/main/default/objects/Opportunity/fields/June_15__c.field-meta.xml
<CustomField>
    <fullName>June_15__c</fullName>
    <label>June 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>