force-app/main/default/objects/Opportunity/fields/Latest_update__c.field-meta.xml
<CustomField>
    <fullName>Latest_update__c</fullName>
    <inlineHelpText>Please clear all values in this field before you input your latest update</inlineHelpText>
    <label>Latest update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>