force-app/main/default/objects/Opportunity/fields/Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>