force-app/main/default/objects/Opportunity/fields/LIVE_API_Credential__c.field-meta.xml
<CustomField>
    <fullName>LIVE_API_Credential__c</fullName>
    <label>LIVE API Credential</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>