force-app/main/default/objects/Opportunity/fields/Live_ECN__c.field-meta.xml
<CustomField>
    <fullName>Live_ECN__c</fullName>
    <label>Live ECN</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>