force-app/main/default/objects/Opportunity/fields/Login_details_sent_to_client__c.field-meta.xml
<CustomField>
    <fullName>Login_details_sent_to_client__c</fullName>
    <inlineHelpText>This date is automatically populated when it has been confirmed that the email containing the login details has been sent. The trigger is based on the ..........</inlineHelpText>
    <label>Login details sent to client</label>
    <type>Date</type>
</CustomField>