force-app/main/default/objects/Opportunity/fields/Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason__c</fullName>
    <inlineHelpText>Why did we lose / pass on this opportunity?</inlineHelpText>
    <label>Lost reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>