force-app/main/default/objects/Opportunity/fields/March_15__c.field-meta.xml
<CustomField>
    <fullName>March_15__c</fullName>
    <label>March 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>