force-app/main/default/objects/Opportunity/fields/Max_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Max_Rebate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>What is the maximum rebate to be offered for this opportunity?</inlineHelpText>
    <label>Max Rebate (BPS)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>