force-app/main/default/objects/Opportunity/fields/May_15__c.field-meta.xml
<CustomField>
    <fullName>May_15__c</fullName>
    <label>May 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>