force-app/main/default/objects/Opportunity/fields/Milestone_Table__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Table__c</fullName>
    <label>Milestone Table</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>