force-app/main/default/objects/Opportunity/fields/November_14__c.field-meta.xml
<CustomField>
    <fullName>November_14__c</fullName>
    <label>November 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>