force-app/main/default/objects/Opportunity/fields/November_15__c.field-meta.xml
<CustomField>
    <fullName>November_15__c</fullName>
    <label>November 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>