force-app/main/default/objects/Opportunity/fields/October_15__c.field-meta.xml
<CustomField>
    <fullName>October_15__c</fullName>
    <label>October 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>