force-app/main/default/objects/Opportunity/fields/October_2014__c.field-meta.xml
<CustomField>
    <fullName>October_2014__c</fullName>
    <label>October 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>