force-app/main/default/objects/Opportunity/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <formula>TEXT( CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Currency</label>
    <type>Text</type>
</CustomField>