force-app/main/default/objects/Opportunity/fields/Opportunity_Qualify_Completed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualify_Completed__c</fullName>
    <label>Opportunity Qualify Completed</label>
    <type>Date</type>
</CustomField>