force-app/main/default/objects/Opportunity/fields/Opportunity_Qualify_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualify_Created__c</fullName>
    <label>Opportunity Qualify Created</label>
    <type>Date</type>
</CustomField>