force-app/main/default/objects/Opportunity/fields/Opportunity_Qualify_Due__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualify_Due__c</fullName>
    <label>Opportunity Qualify Due</label>
    <type>Date</type>
</CustomField>