force-app/main/default/objects/Opportunity/fields/Opportunity_Qualify_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualify_Name__c</fullName>
    <label>Opportunity Qualify Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>