force-app/main/default/objects/Opportunity/fields/Opportunity_Qualify_Task_Due_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualify_Task_Due_Date_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Qualify Task Due Date Today</label>
    <type>Checkbox</type>
</CustomField>