force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Outcome_Completed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Outcome_Completed__c</fullName>
    <label>Opportunity Record Outcome Completed</label>
    <type>Date</type>
</CustomField>