force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Outcome_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Outcome_Created__c</fullName>
    <label>Opportunity Record Outcome Created</label>
    <type>Date</type>
</CustomField>