force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Outcome_Due__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Outcome_Due__c</fullName>
    <label>Opportunity Record Outcome Due</label>
    <type>Date</type>
</CustomField>